problem solve mobile browser height calculation gap with html and body styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,14 @@
   --bg-accent3: darkmagenta;
 }
 
-body { margin:0; padding:0; }
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 h1 { font-family: 'Mirza', cursive;}  /* note that different fonts will require different margin adjustments */
 h2,h3,h4,h5,h6 { font-family: 'Buda', cursive; }
 p, span, a, li {
